discussion/kv_engine/133499/133499_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add DCP cluster_test suite

Initially added to measure backfill performance in a simulated
rebalance.

Change-Id: Ib8fc6a37984ad3f9f4d8173999e300773ecc4f39

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-08-18 09:15:14.000000000
Message: 
Uploaded patch set 13.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-18 09:51:33.000000000
Message: 
Patch Set 13: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25644/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/tests/testapp_cluster/clustertest.cc:202:38:
error: no member named "mutate" in "std::unique_ptr<MemcachedConnection, std::default_delete<MemcachedConnection> >"; did you mean to use "->" instead of "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25644/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3821/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp_cluster/clustertest.cc:202:38: error: no member named "mutate" in "std::unique_ptr<MemcachedConnection, std::default_delete<MemcachedConnection> >"; did you mean to use "->" instead of "."? [clang-diagnostic-error]
            lastMutation[vbid] = conn.mutate(
                                     ^
                                     ->

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3821/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp_cluster/clustertest.cc:202:38:
error: no member named "mutate" in "std::unique_ptr<MemcachedConnection, std::default_delete<MemcachedConnection> >"; did you mean to use "->" instead of "."? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3821/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2345/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/tests/testapp_cluster/dcp_tests.cc b/tests/testapp_cluster/dcp_tests.cc
index b25e83f..283fb05 100644
--- a/tests/testapp_cluster/dcp_tests.cc
+++ b/tests/testapp_cluster/dcp_tests.cc
@@ -267,7 +267,6 @@ TEST_P(DcpPerfSinkTest, Fill) {
                           frame.getRequest()-&gt;getClientOpcode());
                 if (frame.getRequest()-&gt;getPrintableKey() ==
                     &quot;include_deleted_user_xattrs&quot;) {
-
                     const auto opaque = frame.getRequest()-&gt;getOpaque();
                     std::vector&lt;uint8_t&gt; buffer(64);
                     using namespace cb::mcbp;

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2345/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29608/ : FAILURE

Compile error at ..\kv_engine\tests\testapp_cluster\clustertest.cc(202): error C2039: "mutate": is not a member of "std::unique_ptr<MemcachedConnection,std::default_delete<_Ty>>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29608/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4150/ : FAILURE

Compile error at [2020-08-18T09:22:13.084Z] ../kv_engine/tests/testapp_cluster/clustertest.cc:202:38:
error: no member named "mutate" in "std::__1::unique_ptr<MemcachedConnection, std::__1::default_delete<MemcachedConnection> >"; did you mean to use "->" instead of "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4150/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5122/ : FAILURE

Compile error at [2020-08-18T09:18:39.705Z] ../kv_engine/tests/testapp_cluster/clustertest.cc:202:39:
error: ?class std::unique_ptr<MemcachedConnection>? has no member named ?mutate?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5122/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5034/ : FAILURE

Compile error at [2020-08-18T09:27:32.165Z] ../kv_engine/tests/testapp_cluster/clustertest.cc:202:39:
error: ?class std::unique_ptr<MemcachedConnection>? has no member named ?mutate?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5034/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5221/ : FAILURE

Compile error at [2020-08-18T09:28:38.831Z] ../kv_engine/tests/testapp_cluster/clustertest.cc:202:39:
error: ?class std::unique_ptr<MemcachedConnection>? has no member named ?mutate?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5221/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12936/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
